# OSTS

./: CMakeLists.txt  LICENSE  README.md
include/OSTS/: OSTS.h
src/: OSTS.cpp  main.cpp
